修改链接问题

--- a/canvas.html
+++ b/canvas.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>JS Bin</title>
+  <link rel="stylesheet" href="canvas.css">
+  <link rel="stylesheet" href="canvas.js">
 </head>
 <body>
   <canvas id="canvas" width="300" height="300">
