--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>JS Bin</title>
   <link rel="stylesheet" href="canvas.css">
-  <link rel="stylesheet" href="canvas.js">
+  <script type="text/javascript" src="canvas.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="300" height="300">
