--- a/canvas.html
+++ b/canvas.html
@@ -4,15 +4,14 @@
   <meta charset="utf-8">
   <title>JS Bin</title>
   <link rel="stylesheet" href="canvas.css">
-  <script type="text/javascript" src="canvas.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="300" height="300">
   </canvas>
   <div id="action">
     <button id="eraser">橡皮檫</button>
-  <button id="brush">画笔</button>
-</body>
+    <button id="brush">画笔</button>
   </div>
-  
+</body>
+<script src="canvas.js"></script>
 </html>
