--- a/canvas.html
+++ b/canvas.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Bin</title>
   <link rel="stylesheet" href="canvas.css">
 </head>
