--- a/canvas.html
+++ b/canvas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Bin</title>
+  <title>我的画板</title>
   <link rel="stylesheet" href="canvas.css">
 </head>
 <body>
