添加画笔和粗细功能颜色同步功能，对当前已经选用的功能更加清晰

--- a/canvas.html
+++ b/canvas.html
@@ -24,6 +24,13 @@
     <li id="yellow" class="yellow"></li>
     <li id="blue" class="blue"></li>
   </ul>
+  <ul id="width" class="width">
+    <li id='thin' class="thin"></li>
+    <li id="thin2" class="thin2"></li>
+    <li id="normal" class="normal active"></li>
+    <li id="normal2" class="normal2"></li>
+    <li id="thick" class="thick"></li>
+  </ul>
 </body>
 <script src="canvas.js"></script>
 </html>
