--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>我的画板</title>
-  <script src="//at.alicdn.com/t/font_884704_5zlxos9pvqf.js"></script>
+  <script src="//at.alicdn.com/t/font_884704_iwrshzpvqef.js"></script>
   <link rel="stylesheet" href="canvas.css">
 </head>
 <body>
@@ -31,6 +31,15 @@
     <li id="normal2" class="normal2"></li>
     <li id="thick" class="thick"></li>
   </ul>
+  <div class="wrapButton">
+      <svg id="recovery" class="icon" aria-hidden="true">
+          <use xlink:href="#icon-recovery"></use>
+        </svg>
+      <svg id="download" class="icon" aria-hidden="true">
+            <use xlink:href="#icon-down_load"></use>
+          </svg>
+  </div>
+
 </body>
 <script src="canvas.js"></script>
 </html>
